--- a/index.ipynb
+++ b/index.ipynb
@@ -101,12 +101,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_weeks =  3"
+    "number_of_weeks = \"\" 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "3"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
